modified app.css file fixed the styling for the input field to prevent the app from zooming in when the input fields are focused, especially on iOS devices

--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,7 @@ header {
 
 /* Styling for the navigation bar */
 nav {
+  background-color: white;
   width: 100%;
   margin-top: 50px;
   height: 60px;
@@ -204,6 +205,16 @@ footer > img {
   header {
     position: fixed;
     border-radius: 0;
+  }
+
+  input[type=text] {
+    font-size: 16px;
+    width: 140px;
+  }
+
+  button[type=submit] {
+    /* padding-top: 8px; */
+    font-size: 13px;
   }
 
   /* Styling for the main content area */
